# ecommerce-data-analysis-api

./: .env.example  .gitattributes  .gitignore  Dockerfile  Procfile  README.md  alembic.ini  app.db  celerybeat-schedule-shm  celerybeat-schedule-wal  entrypoint.sh  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
ecommerce_data_analysis_api/: __init__.py  cli.py
public/scripts/: kill_celery.py  kill_port.py
public/vision_documents/: readme.md
src/: cli.py  main.py
src/aspects/: caching.py  decorators.py
src/core/: config.py  logging_config.py  middleware.py
src/database/models/: user.py
src/dependencies/: gspread_client.py  repositories_di.py  services_di.py  tasks.py
src/exceptions/: generic_exceptions.py  metrics_exceptions.py  user_exceptions.py
src/handlers/: exception_handler.py
src/repositories/: metrics_repository.py
src/repositories/impl/: metrics_repository_gspread.py  metrics_repository_local.py
src/routers/: __init__.py  admin_router.py  auth_router.py  cache_router.py  metrics_router.py  user_router.py
src/routers/metrics/: customer_router.py  router.py
src/schemas/: metrics.py  pagination.py  user.py
src/services/: cache_service.py  cookie_service.py  metrics_service.py  user_service.py
src/services/metrics/: customer_service.py  metrics_service.py  product_service.py
src/services/user/: auth_service.py  user_service.py
src/tasks/: worker.py
tests/: conftest.py
tests/integration/: test_rfm_integration.py
tests/routers/: test_admin_router.py  test_auth_router.py  test_customer_router.py  test_metrics_router.py  test_product_router.py  test_user_router.py
tests/services/: test_cookie_service.py  test_customer_utils.py  test_metrics_utils.py  test_user_service.py
