[project]
name = "ecommerce_data_analysis_api"
version = "0.1.0"
description = "API REST in Python using FastAPI, SQLAlchemy, Cookies in authentication and Clean Architecture"
authors = [
    {name = "MateoGiuffra",email = "matteogiuffrah40@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
packages = [
    { include = "ecommerce_data_analysis_api" }
]

dependencies = [
    "fastapi (>=0.119.1,<0.120.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "pydantic (>=2.12.3,<3.0.0)",
    "bcrypt (>=5.0.0,<6.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "gspread (>=6.2.1,<7.0.0)",
    "redis[hiredis] (==5.0.0)",
    "loguru (==0.7.2)",
    "alembic (>=1.17.0,<2.0.0)",
    "celery[redis] (>=5.5.3,<6.0.0)",
    "typer (>=0.20.0,<0.21.0)"
]



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "poethepoet (>=0.37.0,<0.38.0)",
    "honcho (>=2.0.0,<3.0.0)",
    "psutil (>=7.1.2,<8.0.0)",
    "pytest-asyncio (>=1.2.0,<2.0.0)"
]

[tool.pytest.ini_options]
pythonpath = [
    "src"
]
asyncio_mode = "auto"

[project.scripts]
ecommerce-cli = "ecommerce_data_analysis_api.cli:app"

[tool.poetry.scripts]
ecommerce-cli = "ecommerce_data_analysis_api.cli:app"

[tool.coverage.run]
omit = [
    "tests/*",
]

[tool.poe.tasks]
ecommerce-cli = "python -m src.cli"
dev = "uvicorn src.main:app --reload"
worker = "poetry run celery -A src.tasks.worker.celery_app worker -l info -P solo -n worker@%h"
beat = "poetry run celery -A src.tasks.worker.celery_app beat -l info"
kill = "python public/scripts/kill_port.py 8000"
"kill:celery" = "python public/scripts/kill_celery.py"
honcho = "honcho start"
"dev:all" = ["kill", "honcho"]

[tool.poetry]
package-mode = true